Prevent timestamp in comments overflowing

--- a/webviews/editorWebview/index.css
+++ b/webviews/editorWebview/index.css
@@ -154,6 +154,9 @@ body .comment-container .review-comment-header {
 	border-bottom: 1px solid var(--vscode-editorHoverWidget-border);
 	border-top-left-radius: 3px;
 	border-top-right-radius: 3px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .description-header {
